dict update brobeur

--- a/whaiout.ipynb
+++ b/whaiout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:606920866f41da9c4a777f91c666d4d9df918f652bed742c301dd77e6d022ee5"
+  "signature": "sha256:1b77257a207bd1a4581b063fb36518a9d9d4807e0a44308b5c55ff1ac1031109"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -37,7 +37,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 40
+     "prompt_number": 76
     },
     {
      "cell_type": "code",
@@ -48,13 +48,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 77
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print wrkbook.sheet_names()\n",
+      "#print wrkbook.sheet_names()\n",
       "\n",
       "worksheet = wrkbook.sheet_by_name('visitor sign database')\n",
       "swlis = []\n",
@@ -63,23 +63,13 @@
       "while curr_row < num_rows:\n",
       "    curr_row += 1\n",
       "    row = worksheet.row(curr_row)\n",
-      "    print row\n",
+      "    #print row\n",
       "    swlis.append(row)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[u'visitor sign database']\n",
-        "[text:u'In Date', text:u'In Time', text:u'In Code', text:u'Name', text:u'Reason', text:u'Out Date', text:u'Out Time', text:u'Out Code']\n",
-        "[text:u'12-Oct-2014', text:u'17:47', text:u'67b61118ef755239362fbefa4125d1facee4209fa44dd767032ea71348155068d830d0944b51d31841f9843bedbbf2eb28f105337b78cbfca6a0804aae3c0eb0bb9d1136bf1f7904e401b66332727abab94d439a15e20ccb39632938ddf4e25bedc122fa5576affe10a5e4c90a6b94ea1c9e84feac1a1e6d5c1e28e00e6c3384', text:u'William Mckee', text:u'ESW', empty:'', empty:'', empty:'']\n"
-       ]
-      }
-     ],
-     "prompt_number": 3
+     "outputs": [],
+     "prompt_number": 78
     },
     {
      "cell_type": "code",
@@ -90,7 +80,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 79
     },
     {
      "cell_type": "code",
@@ -107,9 +97,9 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "12-Oct-2014\n",
-        "17:47\n",
-        "67b61118ef755239362fbefa4125d1facee4209fa44dd767032ea71348155068d830d0944b51d31841f9843bedbbf2eb28f105337b78cbfca6a0804aae3c0eb0bb9d1136bf1f7904e401b66332727abab94d439a15e20ccb39632938ddf4e25bedc122fa5576affe10a5e4c90a6b94ea1c9e84feac1a1e6d5c1e28e00e6c3384\n",
+        "14-Oct-2014\n",
+        "03:24\n",
+        "7abc6e4b55bb1a3f9807f6cf59ba51d7177819645fbd6fd9d8fdc1c250cb4967ed975d0fcf4d4072e60feba0ae9563e7feb853ea307299bf4d71db8dc8cf3567a5f8afcfc5fa55254fc93c6635a3b88ef7443ed69cb35640f71ac1fe4ef67020fed8027788b53926dc0b52cafe541b14482439ee06e51df2d0dd4b2dae04f215\n",
         "William Mckee\n",
         "ESW\n",
         "\n",
@@ -118,34 +108,7 @@
        ]
       }
      ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "valis"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": [
-        "[u'12-Oct-2014',\n",
-        " u'17:47',\n",
-        " u'67b61118ef755239362fbefa4125d1facee4209fa44dd767032ea71348155068d830d0944b51d31841f9843bedbbf2eb28f105337b78cbfca6a0804aae3c0eb0bb9d1136bf1f7904e401b66332727abab94d439a15e20ccb39632938ddf4e25bedc122fa5576affe10a5e4c90a6b94ea1c9e84feac1a1e6d5c1e28e00e6c3384',\n",
-        " u'William Mckee',\n",
-        " u'ESW',\n",
-        " '',\n",
-        " '',\n",
-        " '']"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "prompt_number": 80
     },
     {
      "cell_type": "code",
@@ -158,7 +121,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 81
     },
     {
      "cell_type": "code",
@@ -174,11 +137,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "comment: fun day\n"
+        "comment: it was a good film\n"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 82
     },
     {
      "cell_type": "code",
@@ -191,7 +154,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
@@ -204,29 +167,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 41
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "snoutm"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 42,
-       "text": [
-        "{'signout comment': 'fun day',\n",
-        " 'signout date': '12-Oct-2014',\n",
-        " 'signout time': '17:59'}"
-       ]
-      }
-     ],
-     "prompt_number": 42
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
@@ -238,7 +179,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
@@ -249,7 +190,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 86
     },
     {
      "cell_type": "code",
@@ -260,7 +201,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 87
     },
     {
      "cell_type": "code",
@@ -271,7 +212,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -288,7 +229,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 89
     },
     {
      "cell_type": "code",
@@ -299,7 +240,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 90
     },
     {
      "cell_type": "code",
@@ -310,7 +251,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 91
     },
     {
      "cell_type": "code",
@@ -339,7 +280,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 31
+     "prompt_number": 92
     },
     {
      "cell_type": "code",
@@ -350,7 +291,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 93
     },
     {
      "cell_type": "code",
@@ -361,7 +302,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 94
     },
     {
      "cell_type": "code",
@@ -374,7 +315,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 95
     },
     {
      "cell_type": "code",
@@ -382,7 +323,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 95
     },
     {
      "cell_type": "code",
@@ -395,7 +337,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
+     "prompt_number": 96
     },
     {
      "cell_type": "code",
@@ -406,7 +348,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 97
     },
     {
      "cell_type": "code",
@@ -420,13 +362,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 37,
+       "prompt_number": 98,
        "text": [
-        "'1ad0a0735ae9'"
+        "'a62c49fb793c'"
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 98
     },
     {
      "cell_type": "code",
@@ -439,27 +381,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 38
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "oplsav"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 39,
-       "text": [
-        "\"['17:47', 'ESW', 'William Mckee', '12-Oct-2014', 'it was a good day']['17:59', '12-Oct-2014']['17:59', 'fun day', '12-Oct-2014']\""
-       ]
-      }
-     ],
-     "prompt_number": 39
+     "prompt_number": 99
     },
     {
      "cell_type": "code",
@@ -469,6 +391,73 @@
       "jsnrd.write(oplsav)\n",
       "jsnrd.close()"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 100
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "savpos = open('/home/wcmckee/visignsys/index.json', 'r')\n",
+      "signindi = savpos.read()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 101
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "jsnaccept = signindi.replace(\"'\", \"\\\"\")\n",
+      "d = json.loads(jsnaccept)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 102
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "snct = dict(d.items() + snoutm.items())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 103
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "savpos = open('/home/wcmckee/visignsys/posts' + trsor + '.json', 'w')\n",
+      "savpos.write(str(snct))\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 105
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "savpos.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 75
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
