--- a/whaxlu.ipynb
+++ b/whaxlu.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9d249841d8124f10da43363bd102a8f54490ec866661e9e4f50a8c54ec0225fd"
+  "signature": "sha256:7fdafb0caaaceaedb3509a54e9f8eefb0ab22e165df10bad8b3bd9edd818b9fe"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -61,12 +61,15 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 118
+     "prompt_number": 195
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "lasnam = ('Mckee')\n",
+      "firnam = ('William')\n",
+      "dopz = ('04/12/1988')\n",
       "mname = ('William Mckee')\n",
       "ename = ('will@artcontrol.me')\n",
       "signin = ('ESW')"
@@ -74,7 +77,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 119
+     "prompt_number": 196
     },
     {
      "cell_type": "code",
@@ -112,7 +115,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 120
+     "prompt_number": 197
     },
     {
      "cell_type": "code",
@@ -151,7 +154,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 121
+     "prompt_number": 198
     },
     {
      "cell_type": "code",
@@ -162,7 +165,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 122
+     "prompt_number": 199
     },
     {
      "cell_type": "code",
@@ -175,7 +178,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 123
+     "prompt_number": 200
     },
     {
      "cell_type": "code",
@@ -186,7 +189,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 124
+     "prompt_number": 201
     },
     {
      "cell_type": "code",
@@ -203,7 +206,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 125
+     "prompt_number": 202
     },
     {
      "cell_type": "code",
@@ -214,7 +217,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 126
+     "prompt_number": 203
     },
     {
      "cell_type": "code",
@@ -227,7 +230,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 127
+     "prompt_number": 204
     },
     {
      "cell_type": "code",
@@ -238,7 +241,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 128
+     "prompt_number": 205
     },
     {
      "cell_type": "code",
@@ -249,7 +252,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 129
+     "prompt_number": 206
     },
     {
      "cell_type": "code",
@@ -261,7 +264,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 130
+     "prompt_number": 207
     },
     {
      "cell_type": "code",
@@ -272,7 +275,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 131
+     "prompt_number": 208
     },
     {
      "cell_type": "code",
@@ -285,7 +288,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 132
+     "prompt_number": 209
     },
     {
      "cell_type": "code",
@@ -296,7 +299,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 133
+     "prompt_number": 210
     },
     {
      "cell_type": "code",
@@ -307,7 +310,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 134
+     "prompt_number": 211
     },
     {
      "cell_type": "code",
@@ -318,7 +321,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 135
+     "prompt_number": 212
     },
     {
      "cell_type": "code",
@@ -329,7 +332,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 136
+     "prompt_number": 213
     },
     {
      "cell_type": "code",
@@ -343,7 +346,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 137
+     "prompt_number": 214
     },
     {
      "cell_type": "code",
@@ -358,7 +361,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 138
+     "prompt_number": 215
     },
     {
      "cell_type": "code",
@@ -376,7 +379,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 139
+     "prompt_number": 216
     },
     {
      "cell_type": "code",
@@ -391,7 +394,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 140
+     "prompt_number": 217
     },
     {
      "cell_type": "code",
@@ -403,7 +406,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 141
+     "prompt_number": 218
     },
     {
      "cell_type": "code",
@@ -414,7 +417,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 142
+     "prompt_number": 219
     },
     {
      "cell_type": "code",
@@ -425,7 +428,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 143
+     "prompt_number": 220
     },
     {
      "cell_type": "code",
@@ -436,7 +439,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 144
+     "prompt_number": 221
     },
     {
      "cell_type": "code",
@@ -448,7 +451,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 145
+     "prompt_number": 222
     },
     {
      "cell_type": "code",
@@ -464,11 +467,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Comments: watching jersey boys\n"
+        "Comments: im going to draw\n"
        ]
       }
      ],
-     "prompt_number": 146
+     "prompt_number": 228
     },
     {
      "cell_type": "code",
@@ -479,35 +482,36 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 147
+     "prompt_number": 241
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "betdict = {'name': mname}"
+      "betdict = {'firstname': firnam}"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 148
+     "prompt_number": 242
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "dayr = time.strftime(\"%d\" + \"-\" + \"%b\" + \"-\" + \"%Y\")\n",
-      "hrmn = time.strftime(\"%H:%M\")"
+      "hrmn = time.strftime(\"%H:%M:%S\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 149
+     "prompt_number": 243
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "betdict.update({'lastname': lasnam})\n",
       "betdict.update({'reason': signin})\n",
       "betdict.update({'signin comment': usecom})\n",
       "betdict.update({'signin date': dayr})\n",
@@ -516,7 +520,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 150
+     "prompt_number": 244
     },
     {
      "cell_type": "code",
@@ -527,7 +531,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 151
+     "prompt_number": 245
     },
     {
      "cell_type": "code",
@@ -541,13 +545,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 152,
+       "prompt_number": 246,
        "text": [
-        "'{\"signin hrmin\": \"03:24\", \"reason\": \"ESW\", \"name\": \"William Mckee\", \"signin date\": \"14-Oct-2014\", \"signin comment\": \"watching jersey boys\"}'"
+        "'{\"signin hrmin\": \"01:27:33\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"im going to draw\", \"lastname\": \"Mckee\", \"signin date\": \"17-Oct-2014\"}'"
        ]
       }
      ],
-     "prompt_number": 152
+     "prompt_number": 246
     },
     {
      "cell_type": "code",
@@ -558,7 +562,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 153
+     "prompt_number": 247
     },
     {
      "cell_type": "code",
@@ -569,7 +573,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 154
+     "prompt_number": 248
     },
     {
      "cell_type": "code",
@@ -580,7 +584,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 155
+     "prompt_number": 249
     },
     {
      "cell_type": "code",
@@ -591,7 +595,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 156
+     "prompt_number": 250
     },
     {
      "cell_type": "code",
@@ -600,7 +604,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 156
+     "prompt_number": 250
     },
     {
      "cell_type": "code",
@@ -626,7 +630,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 157
+     "prompt_number": 251
     },
     {
      "cell_type": "code",
@@ -637,7 +641,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 158
+     "prompt_number": 252
     },
     {
      "cell_type": "code",
@@ -649,7 +653,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 159
+     "prompt_number": 253
     },
     {
      "cell_type": "code",
@@ -660,7 +664,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 160
+     "prompt_number": 254
     },
     {
      "cell_type": "code",
@@ -673,7 +677,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 161
+     "prompt_number": 255
     },
     {
      "cell_type": "code",
@@ -686,7 +690,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 162
+     "prompt_number": 256
     },
     {
      "cell_type": "code",
@@ -699,7 +703,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 163
+     "prompt_number": 257
     },
     {
      "cell_type": "code",
@@ -712,7 +716,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 164
+     "prompt_number": 258
     },
     {
      "cell_type": "code",
