fixed keys in json

--- a/whaxlu.ipynb
+++ b/whaxlu.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7fdafb0caaaceaedb3509a54e9f8eefb0ab22e165df10bad8b3bd9edd818b9fe"
+  "signature": "sha256:8894cf2e93335b371a3e78503a03c886628edec8e9bd9e3804cc26291b451b88"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -61,7 +61,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 195
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
@@ -77,7 +77,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 196
+     "prompt_number": 76
     },
     {
      "cell_type": "code",
@@ -115,7 +115,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 197
+     "prompt_number": 77
     },
     {
      "cell_type": "code",
@@ -154,7 +154,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 198
+     "prompt_number": 78
     },
     {
      "cell_type": "code",
@@ -165,7 +165,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 199
+     "prompt_number": 79
     },
     {
      "cell_type": "code",
@@ -178,7 +178,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 200
+     "prompt_number": 80
     },
     {
      "cell_type": "code",
@@ -189,7 +189,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 201
+     "prompt_number": 81
     },
     {
      "cell_type": "code",
@@ -206,7 +206,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 202
+     "prompt_number": 82
     },
     {
      "cell_type": "code",
@@ -217,7 +217,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 203
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
@@ -230,7 +230,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 204
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
@@ -241,7 +241,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 205
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
@@ -252,7 +252,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 206
+     "prompt_number": 86
     },
     {
      "cell_type": "code",
@@ -264,7 +264,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 207
+     "prompt_number": 87
     },
     {
      "cell_type": "code",
@@ -275,7 +275,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 208
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -288,7 +288,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 209
+     "prompt_number": 89
     },
     {
      "cell_type": "code",
@@ -299,7 +299,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 210
+     "prompt_number": 90
     },
     {
      "cell_type": "code",
@@ -310,7 +310,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 211
+     "prompt_number": 91
     },
     {
      "cell_type": "code",
@@ -321,7 +321,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 212
+     "prompt_number": 92
     },
     {
      "cell_type": "code",
@@ -332,7 +332,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 213
+     "prompt_number": 93
     },
     {
      "cell_type": "code",
@@ -346,7 +346,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 214
+     "prompt_number": 94
     },
     {
      "cell_type": "code",
@@ -361,7 +361,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 215
+     "prompt_number": 95
     },
     {
      "cell_type": "code",
@@ -379,7 +379,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 216
+     "prompt_number": 96
     },
     {
      "cell_type": "code",
@@ -394,7 +394,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 217
+     "prompt_number": 97
     },
     {
      "cell_type": "code",
@@ -406,7 +406,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 218
+     "prompt_number": 98
     },
     {
      "cell_type": "code",
@@ -417,7 +417,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 219
+     "prompt_number": 99
     },
     {
      "cell_type": "code",
@@ -428,7 +428,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 220
+     "prompt_number": 100
     },
     {
      "cell_type": "code",
@@ -439,7 +439,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 221
+     "prompt_number": 101
     },
     {
      "cell_type": "code",
@@ -451,7 +451,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 222
+     "prompt_number": 102
     },
     {
      "cell_type": "code",
@@ -467,11 +467,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Comments: im going to draw\n"
+        "Comments: checking third time\n"
        ]
       }
      ],
-     "prompt_number": 228
+     "prompt_number": 104
     },
     {
      "cell_type": "code",
@@ -482,7 +482,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 241
+     "prompt_number": 105
     },
     {
      "cell_type": "code",
@@ -493,7 +493,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 242
+     "prompt_number": 106
     },
     {
      "cell_type": "code",
@@ -505,7 +505,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 243
+     "prompt_number": 107
     },
     {
      "cell_type": "code",
@@ -513,14 +513,14 @@
      "input": [
       "betdict.update({'lastname': lasnam})\n",
       "betdict.update({'reason': signin})\n",
-      "betdict.update({'signin comment': usecom})\n",
-      "betdict.update({'signin date': dayr})\n",
-      "betdict.update({'signin hrmin': hrmn})"
+      "betdict.update({'signin-com': usecom})\n",
+      "betdict.update({'signin-date': dayr})\n",
+      "betdict.update({'signin-hrmin': hrmn})"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 244
+     "prompt_number": 108
     },
     {
      "cell_type": "code",
@@ -531,7 +531,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 245
+     "prompt_number": 109
     },
     {
      "cell_type": "code",
@@ -545,13 +545,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 246,
+       "prompt_number": 110,
        "text": [
-        "'{\"signin hrmin\": \"01:27:33\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"im going to draw\", \"lastname\": \"Mckee\", \"signin date\": \"17-Oct-2014\"}'"
+        "'{\"signin-date\": \"23-Oct-2014\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin-hrmin\": \"17:13:14\", \"signin-com\": \"checking third time\", \"lastname\": \"Mckee\"}'"
        ]
       }
      ],
-     "prompt_number": 246
+     "prompt_number": 110
     },
     {
      "cell_type": "code",
@@ -562,7 +562,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 247
+     "prompt_number": 111
     },
     {
      "cell_type": "code",
@@ -573,7 +573,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 248
+     "prompt_number": 112
     },
     {
      "cell_type": "code",
@@ -584,7 +584,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 249
+     "prompt_number": 113
     },
     {
      "cell_type": "code",
@@ -595,7 +595,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 250
+     "prompt_number": 114
     },
     {
      "cell_type": "code",
@@ -604,7 +604,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 250
+     "prompt_number": 114
     },
     {
      "cell_type": "code",
@@ -630,7 +630,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 251
+     "prompt_number": 115
     },
     {
      "cell_type": "code",
@@ -641,7 +641,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 252
+     "prompt_number": 116
     },
     {
      "cell_type": "code",
@@ -653,7 +653,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 253
+     "prompt_number": 117
     },
     {
      "cell_type": "code",
@@ -664,7 +664,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 254
+     "prompt_number": 118
     },
     {
      "cell_type": "code",
@@ -677,7 +677,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 255
+     "prompt_number": 119
     },
     {
      "cell_type": "code",
@@ -690,7 +690,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 256
+     "prompt_number": 120
     },
     {
      "cell_type": "code",
@@ -703,7 +703,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 257
+     "prompt_number": 121
     },
     {
      "cell_type": "code",
@@ -716,7 +716,16 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 258
+     "prompt_number": 122
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 122
     },
     {
      "cell_type": "code",
