--- a/whaiout.ipynb
+++ b/whaiout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a1c8d9f82861d946998ca6e7aebd52ba1fe9346429e12426ea2877854b18c763"
+  "signature": "sha256:94786d3de1efc7ea21790d2d45d80c315562b4eb94a4dd033f568a8ce6d5354d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -37,7 +37,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 76
+     "prompt_number": 61
     },
     {
      "cell_type": "code",
@@ -48,7 +48,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 77
+     "prompt_number": 62
     },
     {
      "cell_type": "code",
@@ -69,7 +69,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 78
+     "prompt_number": 63
     },
     {
      "cell_type": "code",
@@ -80,7 +80,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 79
+     "prompt_number": 64
     },
     {
      "cell_type": "code",
@@ -97,18 +97,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "14-Oct-2014\n",
-        "03:24\n",
-        "7abc6e4b55bb1a3f9807f6cf59ba51d7177819645fbd6fd9d8fdc1c250cb4967ed975d0fcf4d4072e60feba0ae9563e7feb853ea307299bf4d71db8dc8cf3567a5f8afcfc5fa55254fc93c6635a3b88ef7443ed69cb35640f71ac1fe4ef67020fed8027788b53926dc0b52cafe541b14482439ee06e51df2d0dd4b2dae04f215\n",
+        "20-Oct-2014\n",
+        "07:15\n",
+        "bc157cd38f17cf856e8128f1f66016d226262f014304f678b7ef92de5cdba1199ca0f64eb114ce66502fc7baed9e4dc3e4ee66de8463b71ccbd67d92e5c1576545bbf70e09902b4a50e0a6ea11e1c8437c8e3a8d6ac1b7b0a5c6425b7972f33705914f4ef56176ec9d83158566d96bb4b0c7acd79c17f0b6ec37af470762ff92\n",
         "William Mckee\n",
         "ESW\n",
-        "\n",
-        "\n",
-        "\n"
+        "26-Oct-2014\n",
+        "21:32\n",
+        "4884366045672d53dab2dc35a4d5e1b00d8b9757509a5dccfac70760f44de81e7b797224e325ddfa36eda2da73517d00f5a925e751448e6aed63eee7c45ce2225e396d182a4e3df3a42031065227a6775abf2eb6279a461b8e1901bbb65cb88bb6cda10f84ff3e7fc574c81a2de19033d4880552e071d5cf18471378076ff8b4\n"
        ]
       }
      ],
-     "prompt_number": 80
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
@@ -121,7 +121,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 81
+     "prompt_number": 66
     },
     {
      "cell_type": "code",
@@ -137,11 +137,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "comment: it was a good film\n"
+        "comment: testing early morning\n"
        ]
       }
      ],
-     "prompt_number": 82
+     "prompt_number": 67
     },
     {
      "cell_type": "code",
@@ -154,20 +154,20 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 83
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "snoutm = {'signout date': endate}\n",
-      "snoutm.update({'signout time': entim})\n",
-      "snoutm.update({'signout comment': inpcom})"
+      "snoutm = {'out-date': endate}\n",
+      "snoutm.update({'out-time': entim})\n",
+      "snoutm.update({'out-comment': inpcom})"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 84
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
@@ -179,7 +179,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 85
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
@@ -190,7 +190,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 86
+     "prompt_number": 71
     },
     {
      "cell_type": "code",
@@ -201,7 +201,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 87
+     "prompt_number": 72
     },
     {
      "cell_type": "code",
@@ -212,7 +212,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 88
+     "prompt_number": 73
     },
     {
      "cell_type": "code",
@@ -229,7 +229,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 89
+     "prompt_number": 74
     },
     {
      "cell_type": "code",
@@ -240,7 +240,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 90
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
@@ -251,7 +251,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 91
+     "prompt_number": 76
     },
     {
      "cell_type": "code",
@@ -280,7 +280,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 92
+     "prompt_number": 77
     },
     {
      "cell_type": "code",
@@ -291,7 +291,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 93
+     "prompt_number": 78
     },
     {
      "cell_type": "code",
@@ -302,7 +302,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 94
+     "prompt_number": 79
     },
     {
      "cell_type": "code",
@@ -315,7 +315,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 95
+     "prompt_number": 80
     },
     {
      "cell_type": "code",
@@ -324,7 +324,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 95
+     "prompt_number": 80
     },
     {
      "cell_type": "code",
@@ -337,7 +337,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 96
+     "prompt_number": 81
     },
     {
      "cell_type": "code",
@@ -348,7 +348,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 97
+     "prompt_number": 82
     },
     {
      "cell_type": "code",
@@ -362,13 +362,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 98,
+       "prompt_number": 83,
        "text": [
-        "'a62c49fb793c'"
+        "'413c61c9654e'"
        ]
       }
      ],
-     "prompt_number": 98
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
@@ -381,7 +381,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 99
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
@@ -394,7 +394,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 100
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
@@ -405,8 +405,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 101
+     "outputs": [
+      {
+       "ename": "IOError",
+       "evalue": "[Errno 2] No such file or directory: '/home/wcmckee/visignsys/index.json'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-86-011d26fbe418>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msavpos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'/home/wcmckee/visignsys/index.json'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0msignindi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msavpos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: '/home/wcmckee/visignsys/index.json'"
+       ]
+      }
+     ],
+     "prompt_number": 86
     },
     {
      "cell_type": "code",
@@ -418,7 +429,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 102
+     "prompt_number": 87
     },
     {
      "cell_type": "code",
@@ -429,7 +440,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 103
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -440,7 +451,301 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 75
+     "prompt_number": 89
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "os.chdir('/home/wcmckee/visignsys/posts')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 90
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "lismet = os.listdir('/home/wcmckee/visignsys/posts')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 91
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "lismet"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 92,
+       "text": [
+        "['df5aed94d944.meta',\n",
+        " '5e98dfab4326.json',\n",
+        " '8bf3b3c045b2.json',\n",
+        " '5e98dfab4326.html',\n",
+        " '2ce7b7e78b2d.meta',\n",
+        " 'a5fd59588711.html',\n",
+        " '8bf3b3c045b2.meta',\n",
+        " '4a1d7fbd4af7.html',\n",
+        " '413c61c9654e.meta',\n",
+        " '81ae6564478e.meta',\n",
+        " '1ca6f0c7d074.html',\n",
+        " 'be7f3bba40a9.json',\n",
+        " '1bca31594654.html',\n",
+        " 'be7f3bba40a9.html',\n",
+        " '81ae6564478e.json',\n",
+        " 'be7f3bba40a9.meta',\n",
+        " 'd948bc2cb2d5.meta',\n",
+        " '469b6be62e65.json',\n",
+        " 'f63a51c5660b.json',\n",
+        " 'f63a51c5660b.html',\n",
+        " '4a1d7fbd4af7.json',\n",
+        " 'd7bfad4d84af.meta',\n",
+        " '91ece852eb61.meta',\n",
+        " '086ef98a8bea.meta',\n",
+        " '231f0cbc6422.html',\n",
+        " '413c61c9654e.json',\n",
+        " '1ca6f0c7d074.meta',\n",
+        " '5e98dfab4326.meta',\n",
+        " '9479b52fcb96.meta',\n",
+        " 'a5fd59588711.meta',\n",
+        " '6e8165886873.json',\n",
+        " '3342b7e37622.json',\n",
+        " '231f0cbc6422.meta',\n",
+        " '1ca6f0c7d074.json',\n",
+        " 'd948bc2cb2d5.html',\n",
+        " '4a1d7fbd4af7.meta',\n",
+        " '6e8165886873.meta',\n",
+        " 'a5fd59588711.json',\n",
+        " '6dbfbbb9c12e.html',\n",
+        " '81ae6564478e.html',\n",
+        " 'd7bfad4d84af.json',\n",
+        " '231f0cbc6422.json',\n",
+        " 'df5aed94d944.html',\n",
+        " '469b6be62e65.meta',\n",
+        " '9479b52fcb96.json',\n",
+        " 'f63a51c5660b.meta',\n",
+        " '2ce7b7e78b2d.json',\n",
+        " 'df5aed94d944.json',\n",
+        " '3342b7e37622.meta',\n",
+        " '1bca31594654.meta',\n",
+        " '1bca31594654.json',\n",
+        " '6dbfbbb9c12e.meta',\n",
+        " '086ef98a8bea.json',\n",
+        " 'd948bc2cb2d5.json']"
+       ]
+      }
+     ],
+     "prompt_number": 92
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "opjsnz = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 99
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for beca in lismet:\n",
+      "    if '.json' in beca:\n",
+      "        print beca\n",
+      "        opjsnz.append(beca)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "5e98dfab4326.json\n",
+        "8bf3b3c045b2.json\n",
+        "be7f3bba40a9.json\n",
+        "81ae6564478e.json\n",
+        "469b6be62e65.json\n",
+        "f63a51c5660b.json\n",
+        "4a1d7fbd4af7.json\n",
+        "413c61c9654e.json\n",
+        "6e8165886873.json\n",
+        "3342b7e37622.json\n",
+        "1ca6f0c7d074.json\n",
+        "a5fd59588711.json\n",
+        "d7bfad4d84af.json\n",
+        "231f0cbc6422.json\n",
+        "9479b52fcb96.json\n",
+        "2ce7b7e78b2d.json\n",
+        "df5aed94d944.json\n",
+        "1bca31594654.json\n",
+        "086ef98a8bea.json\n",
+        "d948bc2cb2d5.json\n"
+       ]
+      }
+     ],
+     "prompt_number": 100
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "optjz = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 101
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for opjw in opjsnz:\n",
+      "    print opjw\n",
+      "    optjsz.append(objw)\n",
+      "    "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "5e98dfab4326.json\n"
+       ]
+      },
+      {
+       "ename": "NameError",
+       "evalue": "name 'optjsz' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-102-4fbf9a4b7e50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mopjw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mopjsnz\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mopjw\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0moptjsz\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'optjsz' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 102
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "apgpls = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 107
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for filop in opjsnz:\n",
+      "    #print filop\n",
+      "    opt = open(opj, 'r')\n",
+      "    thedict = str(opt.read())\n",
+      "    thedict\n",
+      "    opt.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 108
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "opt = open(opj, 'r')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 109
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "thedict = opt.read()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 110
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "thedict"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 111,
+       "text": [
+        "'{\"signin hrmin\": \"19:11\", \"reason\": \"ESW\", \"name\": \"William Mckee\", \"signin date\": \"21-Oct-2014\", \"signin comment\": \"interested in watching swimmers on way back from walk\"}'"
+       ]
+      }
+     ],
+     "prompt_number": 111
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "convgpj = json.loads(thedict)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 115
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "convgpj.values()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 117,
+       "text": [
+        "[u'19:11',\n",
+        " u'ESW',\n",
+        " u'interested in watching swimmers on way back from walk',\n",
+        " u'William Mckee',\n",
+        " u'21-Oct-2014']"
+       ]
+      }
+     ],
+     "prompt_number": 117
     },
     {
      "cell_type": "code",
