--- a/wcpanda.ipynb
+++ b/wcpanda.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3a18cb7e40fb3d9fd6f9a068a328334055eb59cd608ac70ef7beb0848f31d521"
+  "signature": "sha256:5cf195f19e166e38f11dc809f168d21394ff4c3c895ecd2f4732a5e93c866f2c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1141,6 +1141,195 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "df"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\">\n",
+        "  <thead>\n",
+        "    <tr>\n",
+        "      <th></th>\n",
+        "      <th>0</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <td><strong>0</strong></td>\n",
+        "      <td>            .bashrc</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>1</strong></td>\n",
+        "      <td>       .bash_logout</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>2</strong></td>\n",
+        "      <td>            Desktop</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>3</strong></td>\n",
+        "      <td>              build</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>4</strong></td>\n",
+        "      <td>   .xsession-errors</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>5</strong></td>\n",
+        "      <td>             .local</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>6</strong></td>\n",
+        "      <td>   wcmckee-notebook</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>7</strong></td>\n",
+        "      <td>               whai</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>8</strong></td>\n",
+        "      <td>              posts</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>9</strong></td>\n",
+        "      <td>               .ssh</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>10</strong></td>\n",
+        "      <td>         .gitconfig</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>11</strong></td>\n",
+        "      <td>              .gvfs</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>12</strong></td>\n",
+        "      <td>             motsav</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>13</strong></td>\n",
+        "      <td>             .pulse</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>14</strong></td>\n",
+        "      <td>           .profile</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>15</strong></td>\n",
+        "      <td>        .Xauthority</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>16</strong></td>\n",
+        "      <td>      .bash_history</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>17</strong></td>\n",
+        "      <td>    pistore.desktop</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>18</strong></td>\n",
+        "      <td>             .cache</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>19</strong></td>\n",
+        "      <td>            wcmckee</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>20</strong></td>\n",
+        "      <td>          visignsys</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>21</strong></td>\n",
+        "      <td>           test.txt</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>22</strong></td>\n",
+        "      <td>             Camera</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>23</strong></td>\n",
+        "      <td>           .ipython</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>24</strong></td>\n",
+        "      <td>      .pulse-cookie</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>25</strong></td>\n",
+        "      <td>        .matplotlib</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>26</strong></td>\n",
+        "      <td>            .config</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>27</strong></td>\n",
+        "      <td>              .dbus</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>28</strong></td>\n",
+        "      <td> rgdrecentReference</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>29</strong></td>\n",
+        "      <td> artcontroldrawsyou</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <td><strong>30</strong></td>\n",
+        "      <td>        .thumbnails</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 92,
+       "text": [
+        "                     0\n",
+        "0              .bashrc\n",
+        "1         .bash_logout\n",
+        "2              Desktop\n",
+        "3                build\n",
+        "4     .xsession-errors\n",
+        "5               .local\n",
+        "6     wcmckee-notebook\n",
+        "7                 whai\n",
+        "8                posts\n",
+        "9                 .ssh\n",
+        "10          .gitconfig\n",
+        "11               .gvfs\n",
+        "12              motsav\n",
+        "13              .pulse\n",
+        "14            .profile\n",
+        "15         .Xauthority\n",
+        "16       .bash_history\n",
+        "17     pistore.desktop\n",
+        "18              .cache\n",
+        "19             wcmckee\n",
+        "20           visignsys\n",
+        "21            test.txt\n",
+        "22              Camera\n",
+        "23            .ipython\n",
+        "24       .pulse-cookie\n",
+        "25         .matplotlib\n",
+        "26             .config\n",
+        "27               .dbus\n",
+        "28  rgdrecentReference\n",
+        "29  artcontroldrawsyou\n",
+        "30         .thumbnails"
+       ]
+      }
+     ],
+     "prompt_number": 92
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "lslit = []"
      ],
      "language": "python",
@@ -1320,6 +1509,15 @@
       }
      ],
      "prompt_number": 85
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 92
     },
     {
      "cell_type": "code",
